--- a/Client/src/components/saler/salerDetail/SalerDetail.scss
+++ b/Client/src/components/saler/salerDetail/SalerDetail.scss
@@ -1,78 +1,61 @@
-.saler-detail {
-  margin-bottom: 5rem;
-  width: 100%;
-  max-width: 500px;
-  .card {
+.product-list {
+  color: #333;
+  .table {
+    padding: 5px;
     width: 100%;
-    max-width: 500px;
-    padding: 1rem;
-  }
-  .detail {
-    & > * {
-      margin-bottom: 1rem;
+    overflow-x: auto;
+
+    .search {
+      width: 100%;
+      max-width: 300px;
     }
-    .badge {
-      background-color: var(--color-danger);
-      color: #fff;
-      padding-left: 2px;
-      padding-right: 2px;
-      border-radius: 3px;
-    }
-    p b {
-      color: var(--dark-blue);
-    }
-  }
-}
 
-.group {
-  border: 1px solid var(--dark-blue);
-  padding: 5px;
-}
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      font-size: 1.4rem;
 
-.table {
-  border-collapse: collapse;
-  width: 100%;
-  font-size: 1.4rem;
-
-  thead {
-    border-top: 2px solid var(--light-blue);
-    border-bottom: 2px solid var(--light-blue);
-  }
-
-  th {
-    border: 1px solid #eee;
-  }
-
-  th,
-  td {
-    vertical-align: top;
-    text-align: left;
-    padding: 8px;
-
-    &.icons {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      > * {
-        margin-right: 7px;
-        cursor: pointer;
-        vertical-align: middle;
-        align-self: center;
+      thead {
+        border-top: 2px solid var(--light-blue);
+        border-bottom: 2px solid var(--light-blue);
       }
-    }
-  }
 
-  tr {
-    border-bottom: 1px solid #ccc;
-  }
+      th {
+        border: 1px solid #eee;
+      }
 
-  tr:nth-child(even) {
-    background-color: #fff;
-  }
-  tbody {
-    tr:hover {
-      cursor: pointer;
-      background-color: rgba(31, 147, 255, 0.3);
+      th,
+      td {
+        vertical-align: top;
+        text-align: left;
+        padding: 8px;
+
+        &.icons {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          > * {
+            margin-right: 7px;
+            cursor: pointer;
+            vertical-align: middle;
+            align-self: center;
+          }
+        }
+      }
+
+      tr {
+        border-bottom: 1px solid #ccc;
+      }
+
+      tr:nth-child(even) {
+        background-color: #fff;
+      }
+      tbody {
+        tr:hover {
+          cursor: pointer;
+          background-color: rgba(31, 147, 255, 0.3);
+        }
+      }
     }
   }
 }
